WIP: The code runs, corrections from o3 applied to code.